base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
